--- a/services/changedetection/debug/t1.yml
+++ b/services/changedetection/debug/t1.yml
@@ -1,23 +1,14 @@
 version: '3.2'
-networks:
-  frontend:
-    external:
-      name: reverse-proxy-docker-traefik_routing
 services:
     changedetection:
       image: ghcr.io/dgtlmoon/changedetection.io
       container_name: changedetection
-      networks:
-        - frontend
       hostname: changedetection
       labels:
         - "traefik.enable=true"
-        - traefik.http.routers.yourServices-http.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.yourServices-http.entrypoints=http
-        - traefik.http.routers.yourServices-http.middlewares=https-redirect
-        - "traefik.http.routers.yourServices.rule=Host(`cd.novaspark.io`)"
-        - "traefik.http.routers.yourServices.entrypoints=https"
-        - "traefik.http.routers.yourServices.tls.certresolver=myresolver"
+        - "traefik.http.routers.your_service.rule=Host(`cd.novaspark.io`)"
+        - "traefik.http.routers.your_service.entrypoints=websecure"
+        - "traefik.http.routers.your_service.tls.certresolver=myresolver"
       volumes:
         - changedetection-data:/datastore
 # Configurable proxy list support, see https://github.com/dgtlmoon/changedetection.io/wiki/Proxy-configuration#proxy-list-support
@@ -79,8 +70,6 @@ services:
 
     browser-chrome:
       hostname: browser-chrome
-      networks:
-        - frontend
       image: selenium/standalone-chrome-debug:3.141.59
       environment:
           - VNC_NO_PASSWORD=1
@@ -94,53 +83,27 @@ services:
       restart: unless-stopped
 
 
-    traefik:
-      image: "traefik:latest"
-      container_name: "traefik"
-      networks:
-        - frontend
+    reverse-proxy:
+      image: traefik:v2.0
+      command:
+        - "--api.insecure=true"
+        - "--providers.docker=true"
+        - "--providers.docker.exposedbydefault=false"
+        - "--entrypoints.web.address=:80"
+        - "--entrypoints.websecure.address=:443"
+        - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+        - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+        - "--certificatesresolvers.myresolver.acme.email=xiayanzheng@outlook.com"
+        - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       ports:
         - "80:80"
         - "443:443"
         - "8080:8080"
-      labels:
-        # Enable Traefik for this service, to make it available in the public network
-        - traefik.enable=true
-        # https-redirect middleware to redirect HTTP to HTTPS
-        # It can be re-used by other stacks in other Docker Compose files
-        - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
-        - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
-        # Dashboard HTTP here
-        - traefik.http.routers.traefik.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.traefik.entrypoints=http
-        - traefik.http.routers.traefik.middlewares=https-redirect
-        # Dashboard HTTPS here
-        - traefik.http.routers.traefik-https.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.traefik-https.entrypoints=https
-        - traefik.http.routers.traefik-https.tls=true
-        # Use the special Traefik service api@internal with the web UI/Dashboard
-        - traefik.http.routers.traefik-https.service=api@internal
-        # Use the Let's Encrypt resolver created below
-        - traefik.http.routers.traefik-https.tls.certresolver=myresolver
-      command:
-        # Enable the Traefik log, for configurations and errors
-        - --log
-        # Enable the Dashboard and API
-        - --api
-        - "--providers.docker=true"
-        - "--providers.docker.exposedbydefault=false"
-        # Create an entrypoint "http" listening on address 80
-        - --entrypoints.http.address=:80
-        # Create an entrypoint "https" listening on address 443
-        - --entrypoints.https.address=:443
-        - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-        # - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=http"
-        #- "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-        - "--certificatesresolvers.myresolver.acme.email=xiayanzheng@outlook.com"
-        - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       volumes:
-        - "./letsencrypt:/letsencrypt"
         - "/var/run/docker.sock:/var/run/docker.sock:ro"
+        - "./letsencrypt:/letsencrypt"
+        # - "./traefik.yaml:/etc/traefik/traefik.yaml"
+        - "./dynamic_conf.yaml:/etc/traefik/dynamic_conf.yaml"
 
      # Used for fetching pages via Playwright+Chrome where you need Javascript support.
 
