--- a/services/changedetection/debug/t2.yml
+++ b/services/changedetection/debug/t2.yml
@@ -12,12 +12,12 @@ services:
       hostname: changedetection
       labels:
         - "traefik.enable=true"
-        - traefik.http.routers.yourServices-http.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.yourServices-http.entrypoints=http
-        - traefik.http.routers.yourServices-http.middlewares=https-redirect
-        - "traefik.http.routers.yourServices.rule=Host(`cd.novaspark.io`)"
-        - "traefik.http.routers.yourServices.entrypoints=https"
-        - "traefik.http.routers.yourServices.tls.certresolver=myresolver"
+        # - traefik.http.routers.changedetection-http.rule=Host(`cd.novaspark.io`)
+        # - traefik.http.routers.changedetection-http.entrypoints=http
+        # - traefik.http.routers.changedetection-http.middlewares=https-redirect
+        - "traefik.http.routers.changedetection.rule=Host(`cd.novaspark.io`)"
+        - "traefik.http.routers.changedetection.entrypoints=websecure"
+        - "traefik.http.routers.changedetection.tls.certresolver=letsencrypt"
       volumes:
         - changedetection-data:/datastore
 # Configurable proxy list support, see https://github.com/dgtlmoon/changedetection.io/wiki/Proxy-configuration#proxy-list-support
@@ -93,56 +93,49 @@ services:
           - /dev/shm:/dev/shm
       restart: unless-stopped
 
-
     traefik:
-      image: "traefik:latest"
-      container_name: "traefik"
-      networks:
-        - frontend
-      ports:
-        - "80:80"
-        - "443:443"
-        - "8080:8080"
-      labels:
-        # Enable Traefik for this service, to make it available in the public network
-        - traefik.enable=true
-        # https-redirect middleware to redirect HTTP to HTTPS
-        # It can be re-used by other stacks in other Docker Compose files
-        - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
-        - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
-        # Dashboard HTTP here
-        - traefik.http.routers.traefik.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.traefik.entrypoints=http
-        - traefik.http.routers.traefik.middlewares=https-redirect
-        # Dashboard HTTPS here
-        - traefik.http.routers.traefik-https.rule=Host(`cd.novaspark.io`)
-        - traefik.http.routers.traefik-https.entrypoints=https
-        - traefik.http.routers.traefik-https.tls=true
-        # Use the special Traefik service api@internal with the web UI/Dashboard
-        - traefik.http.routers.traefik-https.service=api@internal
-        # Use the Let's Encrypt resolver created below
-        - traefik.http.routers.traefik-https.tls.certresolver=myresolver
-      command:
-        # Enable the Traefik log, for configurations and errors
-        - --log
-        # Enable the Dashboard and API
-        - --api
-        - "--providers.docker=true"
-        - "--providers.docker.exposedbydefault=false"
-        # Create an entrypoint "http" listening on address 80
-        - --entrypoints.http.address=:80
-        # Create an entrypoint "https" listening on address 443
-        - --entrypoints.https.address=:443
-        - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-        # - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=http"
-        #- "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-        - "--certificatesresolvers.myresolver.acme.email=xiayanzheng@outlook.com"
-        - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
-      volumes:
-        - "./letsencrypt:/letsencrypt"
-        - "/var/run/docker.sock:/var/run/docker.sock:ro"
+        image: traefik:latest
+        container_name: traefik
+        restart: unless-stopped
+        command:
+          # Tell Traefik to discover containers using the Docker API
+          - --providers.docker=true
+          # Enable the Trafik dashboard
+          - --api.dashboard=true
+          # Set up LetsEncrypt
+          - --certificatesresolvers.letsencrypt.acme.dnschallenge=true
+          - --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare
+          - --certificatesresolvers.letsencrypt.acme.email=xiayanzheng@outlook.com
+          - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
+          # Set up an insecure listener that redirects all traffic to TLS
+          - --entrypoints.web.address=:80
+          - --entrypoints.web.http.redirections.entrypoint.to=websecure
+          - --entrypoints.web.http.redirections.entrypoint.scheme=https
+          - --entrypoints.websecure.address=:443
+          # Set up the TLS configuration for our websecure listener
+          - --entrypoints.websecure.http.tls=true
+          - --entrypoints.websecure.http.tls.certResolver=letsencrypt
+          # - --entrypoints.websecure.http.tls.domains[0].main=cd.novaspark.io
+          - --entrypoints.websecure.http.tls.domains[0].sans=*.novaspark.io
+        environment:
+          - CLOUDFLARE_EMAIL=${CLOUDFLARE_EMAIL}
+          - CLOUDFLARE_DNS_API_TOKEN=${CLOUDFLARE_DNS_API_TOKEN}
+        ports:
+          - 80:80
+          - 443:443
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock:ro
+          - ./letsencrypt:/letsencrypt
+        labels:
+          - "traefik.enable=true"
+          - 'traefik.http.routers.traefik.rule=Host(`cd.novaspark.io`)'
+          - "traefik.http.routers.traefik.entrypoints=websecure"
+          - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
+          - "traefik.http.routers.traefik.service=api@internal"
+          - 'traefik.http.routers.traefik.middlewares=strip'
+          - 'traefik.http.middlewares.strip.stripprefix.prefixes=/traefik'
 
-     # Used for fetching pages via Playwright+Chrome where you need Javascript support.
+        # Used for fetching pages via Playwright+Chrome where you need Javascript support.
 
 #    playwright-chrome:
 #        hostname: playwright-chrome
